# Wooeen-Browser

./: README.md
src/chrome/android/: BUILD.gn  wooeen_java_resources.gni  wooeen_java_sources.gni  wooeen_java_sources_base.gni
src/chrome/android/java/: AndroidManifest.xml
src/chrome/android/java/res_chromium_base/drawable/: themed_app_icon.xml
src/chrome/android/java/res_chromium_base/values/: channel_constants.xml
src/chrome/android/java/res_firebase/values/: values_firebase.xml
src/chrome/android/java/res_wooeen/color/: woe_btn_primary_color.xml  woe_btn_secondary_color.xml
src/chrome/android/java/res_wooeen/drawable/: ic_launcher_background.xml  notifications_background.xml  ntp_search_box_bg.xml  woe_bg_primary.xml  woe_btn.xml  woe_btn_borded.xml  woe_btn_borded_clicked.xml  woe_btn_borded_normal.xml  woe_btn_clicked.xml  woe_btn_disabled.xml  woe_btn_header.xml  woe_btn_header_clicked.xml  woe_btn_header_normal.xml  woe_btn_highlight.xml  woe_btn_highlight_clicked.xml  woe_btn_highlight_normal.xml  woe_btn_icon.xml  woe_btn_icon_clicked.xml  woe_btn_icon_disabled.xml  woe_btn_icon_normal.xml  woe_btn_link.xml  woe_btn_link_clicked.xml  woe_btn_link_normal.xml  woe_btn_link_transparent.xml  woe_btn_link_transparent_clicked.xml  woe_btn_main.xml  woe_btn_main_clicked.xml  woe_btn_main_disabled.xml  woe_btn_main_div.xml  woe_btn_main_div_clicked.xml  woe_btn_main_normal.xml  woe_btn_main_secondary.xml  woe_btn_main_secondary_clicked.xml  woe_btn_main_secondary_normal.xml  woe_btn_main_v2_blue.xml  woe_btn_main_v2_blue_clicked.xml  woe_btn_main_v2_green.xml  woe_btn_main_v2_green_clicked.xml  woe_btn_main_v2_orange.xml  woe_btn_main_v2_orange_clicked.xml  (+61 more)
src/chrome/android/java/res_wooeen/drawable-night/: woe_bg_primary.xml
src/chrome/android/java/res_wooeen/layout/: activity_login.xml  activity_main.xml  activity_rec_terms.xml  activity_rec_terms_social.xml  advertiser_item.xml  badged_tab.xml  category_dialog.xml  country_dialog.xml  coupon_item.xml  dialog_layout.xml  login_step_email.xml  login_step_pass.xml  login_step_verify.xml  offer_item.xml  post_item.xml  pub_coupon_item.xml  pub_post_item.xml  pub_retargeting_item.xml  pub_task_item.xml  register_cp_step_1.xml  register_cp_step_2_name.xml  register_cp_step_3_email.xml  register_cp_step_4_document.xml  register_cp_step_5_category.xml  register_cp_step_6_finish.xml  register_step_1.xml  register_step_2.xml  register_step_3.xml  register_step_4.xml  register_step_5.xml  register_step_6.xml  register_step_7.xml  register_step_8.xml  register_step_cr.xml  register_step_pass.xml  task_item.xml  woe_area.xml  woe_dialog_update.xml  woe_ntp_banner.xml  woe_ntp_button.xml  (+14 more)
src/chrome/android/java/res_wooeen/layout-land/: woe_dialog_update.xml
src/chrome/android/java/res_wooeen/menu/: woe_pub_item_menu.xml  woe_user_menu_items.xml
src/chrome/android/java/res_wooeen/values/: attrs.xml  colors.xml  dimens.xml  styles.xml  themes.xml
src/chrome/android/java/res_wooeen/values-night/: colors.xml  themes.xml
src/chrome/android/java/res_wooeen/xml/: authenticator.xml  syncadapter.xml
src/chrome/android/java/src_wooeen/com/wooeen/browser/document/: WooeenLauncherActivity.java
src/chrome/android/java/src_wooeen/com/wooeen/view/: CouponItemAdapter.java  MenuUserAdapter.java  WooeenAreaHandler.java
src/chrome/android/java/src_wooeen/com/wooeen/view/advertiser/: AdvertiserAdapter.java
src/chrome/android/java/src_wooeen/com/wooeen/view/auth/: CategoryListAdapter.java  CountryListAdapter.java  LoginStepEmailView.java  LoginStepPassView.java  LoginStepVerifyView.java  LoginView.java  RegisterCompanyStep1View.java  RegisterCompanyStep2NameView.java  RegisterCompanyStep3EmailView.java  RegisterCompanyStep4DocumentView.java  RegisterCompanyStep5CategoryView.java  RegisterCompanyStep6FinishView.java  RegisterCompanyView.java  RegisterStep1View.java  RegisterStep2View.java  RegisterStep3View.java  RegisterStep4View.java  RegisterStep5View.java  RegisterStep6View.java  RegisterStep7View.java  RegisterStep8View.java  RegisterStepCrView.java  RegisterStepPassView.java  RegisterView.java
src/chrome/android/java/src_wooeen/com/wooeen/view/dialog/: WoeUpdateDialog.java
src/chrome/android/java/src_wooeen/com/wooeen/view/tracking/: TrackingHandler.java
src/chrome/android/java/src_wooeen/com/wooeen/view/ui/: CircleTransform.java  MaskEditUtil.java  RoundedCornerLayout.java  RoundedCornersTransformation.java  WoeButton.java  WoeButtonBorded.java  WoeButtonHead.java  WoeButtonMain.java  WoeButtonOrange.java  WoeButtonPrimary.java  WoeButtonSecondary.java  WoeButtonSocial.java  WoeButtonTransparent.java  WoeButtonWidget.java
src/chrome/android/java/src_wooeen/com/wooeen/view/user/: RecTermsSocialView.java  RecTermsView.java
src/chrome/android/java/src_wooeen/com/wooeen/view/utils/: DepsUtils.java  ExceptionHandler.java  PubViewUtils.java  RecyclerItemListener.java
src/chrome/android/java/src_wooeen_base/com/wooeen/model/api/: AdvertiserAPI.java  CategoryAPI.java  CountryAPI.java  CouponAPI.java  NavigationAPI.java  OfferAPI.java  PostAPI.java  PubAPI.java  RetargetingAPI.java  TaskAPI.java  TrackingAPI.java  UserAPI.java  UserInstallAPI.java  UtilsAPI.java  VersionAPI.java  WoePushAPI.java  WoeTrkAPI.java
src/chrome/android/java/src_wooeen_base/com/wooeen/model/dao/: AdvertiserDAO.java  CouponDAO.java  OfferDAO.java  PostDAO.java  TaskDAO.java  TrackingDAO.java
src/chrome/android/java/src_wooeen_base/com/wooeen/model/sync/: WoeAuthenticator.java  WoeAuthenticatorService.java  WoeSyncAdapter.java  WoeSyncAdapterService.java
src/chrome/android/java/src_wooeen_base/com/wooeen/model/to/: AdvertiserDetailTO.java  AdvertiserStatsTO.java  AdvertiserTO.java  CategoryTO.java  CheckoutTO.java  CountryTO.java  (+16 more)
src/chrome/android/java/src_wooeen_base/com/wooeen/utils/: DatetimeUtils.java  Decodificador.java  DeviceUtils.java  NavigationUtils.java  NumberUtils.java  PubUtils.java  TextUtils.java  TrackingUtils.java  UserUtils.java  WoeTrkUtils.java  WooeenSettings.java
src/chrome/android/proguard/: main.flags
(+761 files in other folders)
