# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# To regenerate this list, run:
# sed -i '/^[^#][^[]*$/d' wooeen_java_resources.gni
# (for f in $(find java/res_wooeen/*/ -type f); do echo '  "'$f'",'; done; echo ']') >> wooeen_java_resources.gni
# git cl format

wooeen_java_resources = [
  "java/res_wooeen/font/montserrat_regular.ttf",
  "java/res_wooeen/font/montserrat_bold.ttf",
  "java/res_wooeen/anim/slide_out.xml",
  "java/res_wooeen/anim/fade_in.xml",
  "java/res_wooeen/anim/slide_in.xml",
  "java/res_wooeen/anim/fade_out.xml",
  "java/res_wooeen/color/woe_btn_primary_color.xml",
  "java/res_wooeen/color/woe_btn_secondary_color.xml",
  "java/res_wooeen/drawable/woe_coupon_voucher_bg.xml",
  "java/res_wooeen/drawable/woe_list_layout_coupon_right.xml",
  "java/res_wooeen/drawable/woe_list_layout_coupon.xml",
  "java/res_wooeen/drawable/woe_list_layout_transparent.xml",
  "java/res_wooeen/drawable/woe_list_layout_border.xml",
  "java/res_wooeen/drawable/woe_offer_item_bg_normal.xml",
  "java/res_wooeen/drawable/woe_offer_item_bg.xml",
  "java/res_wooeen/drawable/notifications_background.xml",
  "java/res_wooeen/drawable/woe_rounded_bg.xml",
  "java/res_wooeen/drawable/woe_post_item_bg.xml",
  "java/res_wooeen/drawable/woe_post_item_bg_normal.xml",
  "java/res_wooeen/drawable/woe_post_item_bg_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_icon_disabled.xml",
  "java/res_wooeen/drawable/woe_btn_icon_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_icon_normal.xml",
  "java/res_wooeen/drawable/woe_btn_icon.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary_normal.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary_disabled.xml",
  "java/res_wooeen/drawable/woe_btn_main_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_main_normal.xml",
  "java/res_wooeen/drawable/woe_btn_main.xml",
  "java/res_wooeen/drawable/woe_btn_main_disabled.xml",
  "java/res_wooeen/drawable/woe_bg_primary.xml",
  "java/res_wooeen/drawable/woe_btn_disabled.xml",
  "java/res_wooeen/drawable/woe_edit.xml",
  "java/res_wooeen/drawable/woe_edit_main_clicked.xml",
  "java/res_wooeen/drawable/woe_edit_normal.xml",
  "java/res_wooeen/drawable/woe_edit_clicked.xml",
  "java/res_wooeen/drawable/woe_btn.xml",
  "java/res_wooeen/drawable/woe_btn_normal.xml",
  "java/res_wooeen/drawable/woe_btn_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_primary.xml",
  "java/res_wooeen/drawable/woe_btn_primary_normal.xml",
  "java/res_wooeen/drawable/woe_btn_primary_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_secondary.xml",
  "java/res_wooeen/drawable/woe_btn_secondary_normal.xml",
  "java/res_wooeen/drawable/woe_btn_secondary_clicked.xml",
  "java/res_wooeen/drawable/ic_dashboard_black_24dp.xml",
  "java/res_wooeen/drawable/ic_home_black_24dp.xml",
  "java/res_wooeen/drawable/ic_launcher_background.xml",
  "java/res_wooeen/drawable/woe_list_layout.xml",
  "java/res_wooeen/drawable/ic_notifications_black_24dp.xml",
  "java/res_wooeen/drawable/woe_dialog_panel.xml",
  "java/res_wooeen/drawable/woe_btn_borded_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_borded_normal.xml",
  "java/res_wooeen/drawable/woe_btn_borded_disabled.xml",
  "java/res_wooeen/drawable/woe_btn_borded.xml",
  "java/res_wooeen/drawable/woe_rounded_fg.xml",
  "java/res_wooeen/drawable/woe_rounded_fg_dark.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg_clicked.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg_normal.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg_selected.xml",
  "java/res_wooeen/drawable/woe_offer_item_bg_clicked.xml",
  "java/res_wooeen/drawable-night/woe_bg_primary.xml",
  "java/res_wooeen/drawable-hdpi/woe_stopwatch_blue.png",  
  "java/res_wooeen/drawable-hdpi/woe_copy_white.png",  
  "java/res_wooeen/drawable-hdpi/woe_arrow_right_long_white.png",  
  "java/res_wooeen/drawable-hdpi/woe_more.png",  
  "java/res_wooeen/drawable-hdpi/woe_share.png",
  "java/res_wooeen/drawable-hdpi/woe_banner_1.png",  
  "java/res_wooeen/drawable-hdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-hdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-hdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-hdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-hdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-hdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-hdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-hdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-hdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-hdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-hdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-hdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-hdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-hdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-hdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-hdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-mdpi/woe_stopwatch_blue.png",  
  "java/res_wooeen/drawable-mdpi/woe_copy_white.png",  
  "java/res_wooeen/drawable-mdpi/woe_arrow_right_long_white.png",  
  "java/res_wooeen/drawable-mdpi/woe_more.png",  
  "java/res_wooeen/drawable-mdpi/woe_share.png",  
  "java/res_wooeen/drawable-mdpi/woe_banner_1.png",  
  "java/res_wooeen/drawable-mdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-mdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-mdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-mdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-mdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-mdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-mdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-mdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-mdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-mdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-mdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-mdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-mdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-mdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-mdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-mdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-sw600dp-hdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-hdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-hdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-mdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-mdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-mdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-xhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-xhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-xhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-xxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-xxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-xxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-xxxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-xxxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-xxxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_stopwatch_blue.png",  
  "java/res_wooeen/drawable-xhdpi/woe_copy_white.png",  
  "java/res_wooeen/drawable-xhdpi/woe_arrow_right_long_white.png",  
  "java/res_wooeen/drawable-xhdpi/woe_share.png",  
  "java/res_wooeen/drawable-xhdpi/woe_more.png",  
  "java/res_wooeen/drawable-xhdpi/woe_banner_1.png",  
  "java/res_wooeen/drawable-xhdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-xhdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-xhdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-xhdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-xhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-xhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-xhdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-xhdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-xhdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-xhdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-xhdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-xhdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-xhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-xhdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_stopwatch_blue.png",  
  "java/res_wooeen/drawable-xxhdpi/woe_copy_white.png",  
  "java/res_wooeen/drawable-xxhdpi/woe_arrow_right_long_white.png",  
  "java/res_wooeen/drawable-xxhdpi/woe_share.png",  
  "java/res_wooeen/drawable-xxhdpi/woe_more.png",  
  "java/res_wooeen/drawable-xxhdpi/woe_banner_1.png",  
  "java/res_wooeen/drawable-xxhdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-xxhdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-xxhdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-xxhdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-xxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-xxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-xxhdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-xxhdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-xxhdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-xxhdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-xxhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-xxhdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-xxhdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-xxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_stopwatch_blue.png",  
  "java/res_wooeen/drawable-xxxhdpi/woe_copy_white.png",  
  "java/res_wooeen/drawable-xxxhdpi/woe_arrow_right_long_white.png",  
  "java/res_wooeen/drawable-xxxhdpi/woe_share.png",  
  "java/res_wooeen/drawable-xxxhdpi/woe_more.png",  
  "java/res_wooeen/drawable-xxxhdpi/woe_banner_1.png",  
  "java/res_wooeen/drawable-xxxhdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-xxxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-xxxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-xxxhdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-xxxhdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-xxxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_advertisers_white.png",
  "java/res_wooeen/layout/dialog_layout.xml",
  "java/res_wooeen/layout/badged_tab.xml",
  "java/res_wooeen/layout/coupon_item.xml",
  "java/res_wooeen/layout/offer_item.xml",
  "java/res_wooeen/layout/task_item.xml",
  "java/res_wooeen/layout/activity_rec_terms.xml",
  "java/res_wooeen/layout/post_item.xml",
  "java/res_wooeen/layout/register_step_1.xml",
  "java/res_wooeen/layout/activity_main.xml",
  "java/res_wooeen/layout/advertiser_item.xml",
  "java/res_wooeen/layout/login_step_email.xml",
  "java/res_wooeen/layout/register_step_2.xml",
  "java/res_wooeen/layout/activity_login.xml",
  "java/res_wooeen/layout/register_step_5.xml",
  "java/res_wooeen/layout/register_step_4.xml",
  "java/res_wooeen/layout/register_step_6.xml",
  "java/res_wooeen/layout/register_step_7.xml",
  "java/res_wooeen/layout/register_step_3.xml",
  "java/res_wooeen/layout/login_step_verify.xml",
  "java/res_wooeen/layout/login_step_pass.xml",
  "java/res_wooeen/layout/register_step_8.xml",
  "java/res_wooeen/layout/register_step_pass.xml",
  "java/res_wooeen/mipmap-anydpi-v26/ic_launcher_round.xml",
  "java/res_wooeen/mipmap-anydpi-v26/ic_launcher.xml",
  "java/res_wooeen/mipmap-hdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-hdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-hdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-mdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-mdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-mdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-xhdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-xhdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-xhdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-xxhdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-xxhdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-xxhdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-xxxhdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-xxxhdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-xxxhdpi/ic_launcher_round.png",
  "java/res_wooeen/drawable-night-mdpi/woe_share.png",  
  "java/res_wooeen/drawable-night-mdpi/woe_share_purple.png", 
  "java/res_wooeen/drawable-night-mdpi/wooeen_logo.png", 
  "java/res_wooeen/drawable-night-hdpi/woe_share.png",  
  "java/res_wooeen/drawable-night-hdpi/woe_share_purple.png", 
  "java/res_wooeen/drawable-night-hdpi/wooeen_logo.png", 
  "java/res_wooeen/drawable-night-xhdpi/woe_share.png",  
  "java/res_wooeen/drawable-night-xhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-night-xhdpi/wooeen_logo.png", 
  "java/res_wooeen/drawable-night-xxhdpi/woe_share.png",  
  "java/res_wooeen/drawable-night-xxhdpi/woe_share_purple.png",  
  "java/res_wooeen/drawable-night-xxhdpi/wooeen_logo.png", 
  "java/res_wooeen/drawable-night-xxxhdpi/woe_share.png",  
  "java/res_wooeen/drawable-night-xxxhdpi/woe_share_purple.png",  
  "java/res_wooeen/drawable-night-xxxhdpi/wooeen_logo.png", 
  "java/res_wooeen/transition/fade.xml",
  "java/res_wooeen/transition/slide_right.xml",
  "java/res_wooeen/values/attrs.xml",
  "java/res_wooeen/values/themes.xml",
  "java/res_wooeen/values/styles.xml",
  "java/res_wooeen/values/colors.xml",
  "java/res_wooeen/values/dimens.xml",
  "java/res_wooeen/values-night/themes.xml",
  "java/res_wooeen/values-night/colors.xml",
  "java/res_wooeen/xml/authenticator.xml",
  "java/res_wooeen/xml/syncadapter.xml",
]
